bug fix dark mode

--- a/src/app/application/sales-dash-section/view-orders/view-orders.component.css
+++ b/src/app/application/sales-dash-section/view-orders/view-orders.component.css
@@ -29,4 +29,41 @@
     background-color: #2d354d !important;
     color: #B1B1B1 !important;
   }
+
+  :host ::ng-deep .p-calendar .p-button {
+    color: black;             
+  }
+  :host-context(.dark) ::ng-deep .p-calendar .p-button {
+    color: white;              
+  }
+
+  ::ng-deep .p-calendar .p-inputtext {
+    padding-right: 3rem !important; /* Make room for both icons */
+  }
+  
+  ::ng-deep .p-calendar .p-calendar-clear-icon {
+    right: 1.2rem !important; /* Position clear button to the left of calendar icon */
+    top: 8.2px !important; /* Move clear button slightly down */
+    order: 1;
+  }
+  
+  
+  ::ng-deep .p-calendar .p-datepicker-trigger {
+    right: 0.5rem !important; /* Position calendar icon on the far right */
+    order: 2;
+  }
+  
+  /* For light mode placeholder */
+:host ::ng-deep .p-calendar .p-inputtext::placeholder {
+  color: #6c6c6c; /* gray-400 */
+}
+
+/* For dark mode placeholder */
+:host-context(.dark) ::ng-deep .p-calendar .p-inputtext::placeholder {
+  color: #8B8B8B; /* gray-300 */
+}
+
+
+
+
   
